[metadata]
name = le
version = 0.3.3
url = https://github.com/cganterh/le
author = Cristóbal Ganter
author_email = cganterh@gmail.com
description = A silly chatbot for telegram.
long_description = file: README.md
keywords = python, python3, telegram-bot, chatbot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Chat

[options]
install_requires = python-telegram-bot~=6.0
py_modules = le
test_suite = tests

[options.entry_points]
console_scripts = lebot=le:run

[coverage:run]
include = le.py
